--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask
-pandas
-numpy
-scikit-learn
-xgboost
-lightgbm
-tensorflow
-prophet
-seaborn
-matplotlib
+flask==2.0.1
+flask-socketio==5.1.1
+pandas==1.4.0
+numpy==1.21.0
+scikit-learn==1.0.2
+xgboost==1.5.0
+lightgbm==3.3.2
+plotly==5.5.0
+statsmodels==0.13.2
+scipy==1.7.3
+xlsxwriter==3.0.2
